# experiments

./: -  .clineignore  .coverage  .gitignore  CLAUDE.md  README.md  demo-workflow.yaml  index.html  nano_banana.md  pyproject.toml  requirements.txt
.claude/skills/hydrate-cli/: SKILL.md
.claude/skills/llm-cli/: SKILL.md
.claude/skills/nano-banana/: SKILL.md
.claude/skills/tm/: SKILL.md
.claude/skills/workflows/: SKILL.md
.claude/skills/workflows-cli/: SKILL.md
.clinerules/: global.md  python.md  react-typescript.md
.clinerules/workflows/: do-single-task.md  do-tasks.md
.github/workflows/: deploy.yml
codebuddy_prompts/: image_data.md
data/: get_dataset.py
docs/: index.html
docs/task-tracker/: index.html
examples/hydrate-mdview/: README.md  disclaimer.md  events.jsonl  math.md  output.md  report.md
experiments/task-tracker/: .prettierignore  package-lock.json  package.json  vite.config.ts
hydrate-test-data/: notes.md  output.md  products.tsv  report.md  users.csv
memory-bank/: progress.md  projectArchitecture.md
scripts/: initialize_test_image_data.py
src/hydrate/: __init__.py  cli.py  converters.py  errors.py  parser.py
src/llm_cli/: __init__.py  cli.py  client.py
src/md_view/: __init__.py  cli.py  errors.py  renderer.py  template.py
src/nano_banana/: __init__.py  cli.py  generator.py  utils.py
src/tm/: __init__.py  cli.py  config.py  models.py  workflow.py
src/wf/: __init__.py  cli.py  config.py  workflow.py
task-tracker/: index.html
task-tracker/assets/: index-D9nJRwqZ.js  index-DnqZY1F2.css
tests/: test_get_dataset.py
tests/hydrate/: __init__.py  test_cli.py  test_converters.py  test_parser.py
tests/llm_cli/: __init__.py  test_cli.py  test_client.py
tests/md_view/: __init__.py  test_cli.py  test_renderer.py  test_template.py
tests/nano_banana/: __init__.py  test_cli.py  test_generator.py  test_utils.py
tests/tm/: __init__.py  test_cli.py  test_config.py  test_models.py  test_workflow.py
tests/wf/: test_cli.py  test_config.py  test_models.py  test_workflow.py
(+19 files in other folders)
