[project]
name = "coding-agent-experiments"
version = "0.1.0"
description = "A collection of Python coding agent experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tyro>=0.8",
    "google-genai>=1.0",
    "Pillow>=10.0",
    "PyYAML>=6.0",
]

[project.scripts]
nano_banana = "nano_banana.cli:main"
wf = "wf.cli:main"
hydrate = "hydrate.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "coverage>=7.0",
    "ipython>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nano_banana", "src/wf", "src/hydrate"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
